# lego-robot-mcp

./: .mcp.json  CLAUDE.md  PLAN.md  pyproject.toml  requirements.txt
mcp_robot/: camera.py  config.py  preview.py  robot.py  rpi_client.py  server.py  stream.py  vision.py  viz.py
