[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-robot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "paramiko>=3.4",
    "google-genai>=1.0",
    "ollama>=0.3",
    "Pillow>=10.4",
]

[project.optional-dependencies]
viz = [
    "rerun-sdk>=0.16",
    "numpy>=1.24",
]

[project.scripts]
mcp-robot = "mcp_robot.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_robot*"]
